# bilinear-modular-arthimetic

./: .gitignore  .pre-commit-config.yaml  README.md  debug_training.py  pyproject.toml  test_fix.py
.github/workflows/: ci.yml
core/: README.md  __init__.py  train.py  visualize.py
examples/: generate_dataset_example.py
src/bilinear_modular/: __init__.py  cli.py
src/bilinear_modular/core/: __init__.py  dataset.py  train.py
src/bilinear_modular/exp/: __init__.py  eigendecompose.py
src/bilinear_modular/viz/: README.md  __init__.py  eigenvectors.py  interaction_matrices.py
tests/: test_dataset.py  test_placeholder.py  test_visualization.py
viz/: README.md  interaction_matrices.py
